# aact-connect

./: .gitignore  AACT_6_5085_results.csv  Cargo.toml  README.md  aact-connect.py  aact_connect.py  requirements.txt
.github/workflows/: rust.yml
AE_lookup/: AE_count_NCT01895855.csv  AE_lookup_NCT00574548_2023-04-10.csv  AE_lookup_NCT01895855.csv  AE_lookup_NCT03044327.csv  AE_lookup_NCT03691623.csv  AE_lookup_NCT04044352.csv  AE_lookup_NCT04150250.csv
additional_data/: query_2_additional_data.csv
comparisons/: included_records.txt
env/: pyvenv.cfg
queries/: query_5083_results.csv  query_5127_results.csv  query_5130_results_2023-04-10.csv  query_5842_results.csv
query_results/: query_5131_results_2023-04-11.csv  query_5131_results_2023-04-15.csv
query_text/: systematic_review_query.txt
src/: compare_dataset.rs  lib.rs  main.rs
src/add_results/: add_results.rs  add_struct_to_polars.rs  mod.rs
src/get_results/: get_results.rs  mod.rs  result_struct_to_polars.rs
src/setup/: check_args.rs  mod.rs  setup.rs
src/structs/: add_results.rs  args.rs  connect_results.rs  mod.rs
src/tests/: mod.rs  test_add_result_content.rs  test_add_results.rs  test_get_and_add_results.rs  test_get_results.rs  test_result_content.rs  test_results.rs  test_setup.rs  utils.rs
tests/: test_aact_connect.py
