[package]
name = "aact_connect"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = [
    "with-chrono-0_4",
    "with-time-0_3",
] }
csv = "1.2.2"
polars = { version = "0.31.1", features = ["lazy", "is_in"] }
chrono = "0.4.26"
indicatif = "0.17.5"
futures = "0.3.28"
clap = { version = "4.3.19", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
